--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,12 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# Enable R8 full mode for better optimization
+android.enableR8.fullMode=true
+
+# Enable build cache
+org.gradle.caching=true
+
+# Enable configuration cache
+org.gradle.configuration-cache=true
