--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/Theme.FluppyModiGame">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
